--- a/index.html
+++ b/index.html
@@ -86,7 +86,19 @@
         <img src="./assets/Image/Image 12.png"alt="Coliseu em roma ">
         
     </main>
-    <footer></footer>
+    <footer class="container">
+        <span>
+            Travelgram &copy; 2024
+        </span>
+
+        <span>
+            Termos de uso
+        </span>
+        <span>
+            Política de privacidade
+        </span>
+
+    </footer>
     
 </body>
 </html>
